--- a/index.html
+++ b/index.html
@@ -7,7 +7,24 @@
     <title>Doughnutfruit Catcher</title>
 </head>
 <body>
-  
+  <div class = "start-screen">
+
+    <h1>Doughnutfruit Catcher</h1>
+
+    <button id="START"></button>
+
+  </div>
+
+  <div class = "game-screen">
+
+    <div id="score">
+      
+    </div>
+  </div>
+
+  <div class = "game-over-screen">
+
+  </div>
 
     <script src="script.js"></script>
 </body>
