--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <link rel="stylesheet" href="styles.css" />
     <title>Doughnutfruit Catcher</title>
 </head>
+
+
 <body>
   <div class = "start-screen">
 
@@ -15,16 +17,25 @@
 
   </div>
 
+
   <div class = "game-screen">
 
-    <div id="score">
-      
-    </div>
+    <div id="score">Score: 0</div>
+
   </div>
+
 
   <div class = "game-over-screen">
 
+    <h1>GAME OVER</h1>
+
+    <p>Your Score: <span id="final-score">0</span></p>
+
+    <button id="restart"> Restart Game</button>
+
   </div>
+
+
 
     <script src="script.js"></script>
   </body>
