--- a/index.html
+++ b/index.html
@@ -16,17 +16,27 @@
         />
         <button class="start-game-btn">Start Game</button>
         <button class="high-score">High-Score</button>
+        <!-- <span>SCORE</span> -->
       </div>
     </div>
     <div>
       <div id="inGame-container">
-        <img class="neo-title" src="/Neopets-Doughnutfruits/bestTitle.png" />
+        <img
+          class="haseeCharacter"
+          src="/Neopets-Doughnutfruits/haseeCharacter.png"
+          <img
+          class="neo-title"
+          src="/Neopets-Doughnutfruits/bestTitle.png"
+        />
         <img class="inGame-img" src="/Neopets-Doughnutfruits/inGameImage.png" />
       </div>
     </div>
     <div id="game-over"></div>
 
     <script src="/js/script.js"></script>
+    <script src="/js/game.js"></script>
+    <script src="/js/script.js"></script>
+    <script src="/js/player.js"></script>
     <script src="/js/game.js"></script>
   </body>
 </html>
