--- a/index.html
+++ b/index.html
@@ -21,19 +21,15 @@
     </div>
     <div>
       <div id="inGame-container">
-        <img
-          class="haseeCharacter"
-          src="/Neopets-Doughnutfruits/haseeCharacter.png"
-          />
-          class="neo-title"
-          src="/Neopets-Doughnutfruits/bestTitle.png"
-        />
+        <img class="neo-title" src="/Neopets-Doughnutfruits/bestTitle.png" />
         <img class="inGame-img" src="/Neopets-Doughnutfruits/inGameImage.png" />
+        <div id="player-hasee"></div>
       </div>
     </div>
     <div id="game-over"></div>
 
-    
+    <script src="/js/script.js"></script>
+    <script src="/js/game.js"></script>
     <script src="/js/script.js"></script>
     <script src="/js/player.js"></script>
     <script src="/js/game.js"></script>
