--- a/index.html
+++ b/index.html
@@ -1,37 +1,33 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="/style/styles.css" />
-    <title>Doughnutfruit Catcher</title>
-  </head>
-  <body>
-    <div id="intro-screen">
-      <div class="intro-container">
-        <img class="neo-title" src="/Neopets-Doughnutfruits/bestTitle.png" />
-        <img
-          class="intro-image"
-          src="/Neopets-Doughnutfruits/introUpdated.png"
-        />
-        <button class="start-game-btn">Start Game</button>
-        <button class="high-score">High-Score</button>
-        <!-- <span>SCORE</span> -->
-      </div>
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link rel="stylesheet" href="/style/styles.css" />
+  <title>Doughnutfruit Catcher</title>
+</head>
+<body>
+  <div id="intro-screen">
+    <div class="intro-container">
+      <img class="neo-title" src="/Neopets-Doughnutfruits/bestTitle.png" />
+      <img class="intro-image" src="/Neopets-Doughnutfruits/introUpdated.png" />
+      <button class="start-game-btn">Start Game</button>
+      <button class="high-score">High-Score</button>
     </div>
-    <div>
-      <div id="inGame-container">
-        <img class="neo-title" src="/Neopets-Doughnutfruits/bestTitle.png" />
-        <img class="inGame-img" src="/Neopets-Doughnutfruits/inGameImage.png" />
-        <div id="player-hasee"></div>
-      </div>
-    </div>
-    <div id="game-over"></div>
+  </div>
 
-    <script src="/js/script.js"></script>
-    <script src="/js/game.js"></script>
-    <script src="/js/script.js"></script>
-    <script src="/js/player.js"></script>
-    <script src="/js/game.js"></script>
-  </body>
+  <div>
+    <div id="inGame-container">
+      <img class="haseeCharacter" src="/Neopets-Doughnutfruits/haseeCharacter.png" />
+      <img class="inGame-img" src="/Neopets-Doughnutfruits/inGameImage.png" />
+    </div>
+    
+  </div>
+
+  <div id="game-over"></div>
+  
+  <script src="/js/script.js"></script>
+  <script src="/js/player.js"></script>
+  <script src="/js/game.js"></script>
+</body>
 </html>
