--- a/index.html
+++ b/index.html
@@ -21,8 +21,13 @@
       <img class="haseeCharacter" src="/Neopets-Doughnutfruits/haseeCharacter.png" />
       <img class="inGame-img" src="/Neopets-Doughnutfruits/inGameImage.png" />
     </div>
-    
+   
   </div>
+
+
+
+</div>
+
 
   <div id="game-over"></div>
   
