updated game class

--- a/index.html
+++ b/index.html
@@ -1,38 +1,100 @@
 <!DOCTYPE html>
 <html lang="en">
+  
 <head>
+
   <meta charset="UTF-8" />
+
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
   <link rel="stylesheet" href="/style/styles.css" />
+
   <title>Doughnutfruit Catcher</title>
+
 </head>
+
+
+
 <body>
+
   <div id="intro-screen">
+
     <div class="intro-container">
+
       <img class="neo-title" src="/Neopets-Doughnutfruits/bestTitle.png" />
+
       <img class="intro-image" src="/Neopets-Doughnutfruits/introUpdated.png" />
+
       <button class="start-game-btn">Start Game</button>
+
       <button class="high-score">High-Score</button>
+
     </div>
+
   </div>
 
-  <div>
-    <div id="inGame-container">
-      <img class="haseeCharacter" src="/Neopets-Doughnutfruits/haseeCharacter.png" />
-      <img class="inGame-img" src="/Neopets-Doughnutfruits/inGameImage.png" />
+
+
+  <div id="inGame-container">
+
+
+     <img class="inGame-img" src="/Neopets-Doughnutfruits/inGameImage.png" />
+
+     <img class="haseeCharacter" src="/Neopets-Doughnutfruits/haseeCharacter.png" />
+
+    <div>
+
+     <img src="/Neopets-Doughnutfruits/Dung.webp" alt="dung">
+
     </div>
+
+
+    <!--<div id="fruits">
+
+     <img id="blue" class="color" src="/Neopets-Doughnutfruits/foo_doughnutfruit_blue.gif" alt="blue">
+
+     <img id="green" class="color" src="/Neopets-Doughnutfruits/foo_doughnutfruit_green.gif" alt="green">
+
+     <img id="purple" class="color" src="/Neopets-Doughnutfruits/foo_doughnutfruit_purple.gif" alt="purple">
+
+     <img id="yellow" class="color"  src="/Neopets-Doughnutfruits/foo_doughnutfruit_yellow.gif" alt="yellow">
+
+     <img id="grey" class="color" src="/Neopets-Doughnutfruits/foo_grey_doughnutfruit.gif" alt="grey">
+
+
+     <img id="checkered" class="special" src="/Neopets-Doughnutfruits/checkered_doughnutfruit.gif" alt="checkered">
+
+     <img id="fire" class="special" src="/Neopets-Doughnutfruits/fire_doughnutfruit.gif" alt="fire">
+
+     <img id="fish" class="special" src="/Neopets-Doughnutfruits/foo_doughnutfruit_fish.gif" alt="fish">
+
+     <img id="grill" class="special" src="/Neopets-Doughnutfruits/foo_grill_doughnutfruit.gif" alt="grill">
+
+     <img id="ice" class="special" src="/Neopets-Doughnutfruits/ice_doughnutfruit.gif" alt="ice">
+
+     <img id="sponge" class="special" src="/Neopets-Doughnutfruits/sponge_doughnutfruit.gif" alt="sponge">
+
+     <img id="tropical" class="special" src="/Neopets-Doughnutfruits/tropical_donutfruit.gif" alt="tropical">
+
+
+     <img id="silver" class="premium" src="/Neopets-Doughnutfruits/foo_doughnutfruit_silver.gif" alt="silver">
+
+     <img id="gold" class="premium" src="/Neopets-Doughnutfruits/foo_doughnutfruit_gold.gif" alt="gold">
+
+     <img id="rainbow" class="premium" src="/Neopets-Doughnutfruits/foo_doughnutfruit_rainbow.gif" alt="rainbow">
+
+    </div>-->
+
+
+  </div>
    
-  </div>
-
-
-
-</div>
-
 
   <div id="game-over"></div>
   
+
   <script src="/js/script.js"></script>
-  <script src="/js/player.js"></script>
   <script src="/js/game.js"></script>
+  <script src="/js/player.js"></script>
+
 </body>
 </html>
