--- a/index.html
+++ b/index.html
@@ -71,6 +71,7 @@
             Highest score <strong class="point">100</strong>
           </section>
         </div>
+        <div id="fruits"></div>
       </div>
       <!-- <span>0</span> -->
     </div>
@@ -103,8 +104,9 @@
 
     <!-- <script src="/js/script.js"></script> -->
     <script src="/js/game.js"></script>
-    <script src="/js/script.js"></script>
     <script src="/js/player.js"></script>
+    <script src="/js/script.js"></script>
+   
     <!-- <script src="/js/game.js"></script> -->
   </body>
 </html>
