--- a/index.html
+++ b/index.html
@@ -20,12 +20,16 @@
       <audio id="music">
         <source src="/audio/introAudio.mp3" type="audio/mpeg" />
       </audio>
+      <audio id="bell">
+        <source src="/audio/Swiss Bell Sound.mp3" type="audio/mpeg" />
+      </audio>
       <div class="intro-container">
         <img class="neo-title" src="/Neopets-Doughnutfruits/bestTitle.png" />
         <img
           class="intro-image"
           src="/Neopets-Doughnutfruits/introUpdated.png"
         />
+        <img class="title" src="editedDoughnutfruits/retitle.png" />
         <svg
           xmlns="http://www.w3.org/2000/svg"
           fill="none"
