path change test

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
       href="https://fonts.googleapis.com/css2?family=Cinzel:wght@600;800&family=Montserrat:wght@400;600;800&family=Raleway:wght@300;600&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="/style/styles.css" />
+    <link rel="stylesheet" href="style/styles.css" />
 
     <title>Doughnutfruit Catcher</title>
   </head>
@@ -117,9 +117,9 @@
     </div>
 
     <!-- <script src="/js/script.js"></script> -->
-    <script src="/js/game.js"></script>
-    <script src="/js/player.js"></script>
-    <script src="/js/script.js"></script>
+    <script src="js/game.js"></script>
+    <script src="js/player.js"></script>
+    <script src="js/script.js"></script>
 
     <!-- <script src="/js/game.js"></script> -->
   </body>
