--- a/index.html
+++ b/index.html
@@ -18,19 +18,19 @@
   <body>
     <div id="intro-screen">
       <audio id="music">
-        <source src="/audio/introAudio.mp3" type="audio/mpeg" />
+        <source src="audio/introAudio.mp3" type="audio/mpeg" />
       </audio>
       <audio id="bell">
-        <source src="/audio/Swiss Bell Sound.mp3" type="audio/mpeg" />
+        <source src="audio/Swiss Bell Sound.mp3" type="audio/mpeg" />
       </audio>
       <audio id="dung">
-        <source src="/audio/dungEffect.mp3" type="audio/mpeg" />
+        <source src="audio/dungEffect.mp3" type="audio/mpeg" />
       </audio>
       <div class="intro-container">
-        <img class="neo-title" src="/Neopets-Doughnutfruits/bestTitle.png" />
+        <img class="neo-title" src="Neopets-Doughnutfruits/bestTitle.png" />
         <img
           class="intro-image"
-          src="/Neopets-Doughnutfruits/introUpdated.png"
+          src="Neopets-Doughnutfruits/introUpdated.png"
         />
         <img class="title" src="editedDoughnutfruits/retitle.png" />
         <svg
@@ -68,8 +68,8 @@
     </div>
     <div>
       <div id="inGame-container">
-        <img class="neo-title" src="/Neopets-Doughnutfruits/bestTitle.png" />
-        <img class="inGame-img" src="/Neopets-Doughnutfruits/inGameImage.png" />
+        <img class="neo-title" src="Neopets-Doughnutfruits/bestTitle.png" />
+        <img class="inGame-img" src="Neopets-Doughnutfruits/inGameImage.png" />
         <div id="player-hasee"></div>
         <div id="fruits"></div>
         <div class="score-table">
@@ -87,7 +87,7 @@
         <div>
           <img
             class="neo-title score-title"
-            src="/Neopets-Doughnutfruits/bestTitle.png"
+            src="Neopets-Doughnutfruits/bestTitle.png"
           />
           <h1>Highest Score</h1>
           <table class="table">
@@ -108,8 +108,8 @@
     </div>
 
     <div id="game-over">
-      <img class="neo-title" src="/Neopets-Doughnutfruits/bestTitle.png" />
-      <img class="cry" src="/editedDoughnutfruits/gameoverscreen.png" />
+      <img class="neo-title" src="Neopets-Doughnutfruits/bestTitle.png" />
+      <img class="cry" src="editedDoughnutfruits/gameoverscreen.png" />
       <h1 class="finished">GAME OVER</h1>
       <h2 class="final-score">SCORE</h2>
       <span class="final-score-num">200</span>
